src/components/Search/Search.module.scss
@import '/src/theme/variable';

.search {
  position: relative;

  &__input {
    border: 1px solid $border;
    padding: 12px 20px;
    padding-left: 2.5rem;
    padding-right: 2.5rem;
    outline: none;
    width: 400px;
    border-radius: 10px;
    font-size: 1rem;
    transition: all 0.15s ease-in-out;

    &:focus {
      border: 1px solid $border-focus;
    }
  }

  &__icon {
    svg {
      width: 22px;
      height: 22px;
      opacity: 0.3;
      position: absolute;
      left: 14px;
      top: 12px;
    }
  }

  &__clear {
    svg {
      width: 20px;
      height: 20px;
      opacity: 0.3;
      position: absolute;
      right: 15px;
      top: 13px;

      &:hover {
        opacity: 0.8;
        cursor: pointer;
      }
    }
  }

  @media (max-width: 500px) {
    .search {
      &__input {
        width: 300px;
      }
    }
  }
}

